# Chess-dataset

./: README.md  main.py  pyproject.toml
